--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
     "optimize-css-assets-webpack-plugin": "^3.0.0",
+    "react-popout": "^1.0.1",
+    "react-router": "^4.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
