--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "optimize-css-assets-webpack-plugin": "^3.0.0",
     "react-popout": "^1.0.1",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
