--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "file-loader": "^0.11.2",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "js-cookie": "^2.1.4",
     "node-sass": "^4.5.3",
     "optimize-css-assets-webpack-plugin": "^3.0.0",
     "react-popout": "^1.0.1",
